# V2AndLib.UI

./: .classpath  .gitignore  .gitmodules  .travis.yml  AndroidManifest.xml  CHANGELOG  README.md  build.gradle  build.xml  jenkins.xml  local.properties  local.properties.def  pom.xml  project.properties  settings.gradle
V2AndLib-media-plain/jni/: .clang-format  .gitignore  Application.mk  CMakeLists.txt
V2AndLib-media-plain/jni/audiostreams/: Android.mk  AudioStreamException.cpp  AudioStreamException.h  CMakeLists.txt  DecoderWrapper.cpp  EncoderWrapper.cpp  FileInputStream.cpp  FileInputStream.h  MP3DecoderStream.cpp  MP3DecoderStream.h  MP3EncoderStream.cpp  MP3EncoderStream.h  MP3InputStream.cpp  MP3InputStream.h  MP3OutputStream.cpp  MP3OutputStream.h  OpenSLRecorder.cpp  OpenSLRecorder.h  PCMInputStream.h  PCMInputStreamException.cpp  PCMInputStreamException.h  PCMOutputStream.h  Wrapper.cpp  Wrapper.h  jniwrapper.cpp
V2AndLib-media-plain/jni/graphics/: Android.mk  CJPEGCommon.h  CJPEGDecoder.cpp  CJPEGDecoder.h  CJPEGEncoder.cpp  CJPEGEncoder.h  CMakeLists.txt  CPNGCommon.h  CPNGDecoder.cpp  CPNGDecoder.h  JPEGException.cpp  JPEGException.h  JpegWrapper.cpp  JpegWrapper.h  PNGWrapper.cpp  jni.cpp  jni.h
V2AndLib-media-plain/jni/jpeg-9a/: Android.mk  CMakeLists.txt
V2AndLib-media-plain/jni/lame/: Android.mk  CMakeLists.txt  lame.h  util.h
V2AndLib-media-plain/jni/libpng/: CMakeLists.txt
V2AndLib-media-plain/jni/mpg123/: Android.mk  CMakeLists.txt  config.h
V2AndLib-media-plain/jni/mpg_full/: Android.mk  lame_handler.cpp  lame_handler.h  mpg123.h
(+565 files in other folders)
